# refine-motion

./: CLAUDE.md  CONSTITUTION.md  CONSTITUTION.mini.md  CONSTITUTION.research.md  README.md  pyproject.toml
agent/: codebase.py  session.py  stt.py  tts.py
client/: index.html  manifest.json
mvp/: .env.example  Makefile  README.md  adapters.py  app.py  refinement.py  requirements.txt
mvp/static/: app.js  index.html  style.css
server/: main.py
server/routers/: sessions.py  voice.py
tests/: test_session.py
